--- a/vulgar/src/index.css
+++ b/vulgar/src/index.css
@@ -1,9 +1,11 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Roboto:500,900");
 h1, h3 {
   margin: 0; }
 
 h1 {
-  font-size: 10vw; }
+  font-size: 10vw;
+  padding: 0 25px; }
 
 body, html, #root, .weather-wrap {
   font-family: "Roboto";
@@ -15,7 +17,27 @@ body, html, #root, .weather-wrap {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  transition: 500ms all ease-in-out; }
+
+.city span {
+  font-size: 2vw; }
+
+.city span:after {
+  content: "°C"; }
+
+.city h3 {
+  font-size: 2vw;
+  padding: 50px 0; }
+
+@media all and (max-width: 700px) {
+  .city h1 {
+    font-size: 13vw;
+    padding: 0 5px; }
+  .city span {
+    font-size: 6vw; }
+  .city h3 {
+    font-size: 6vw; } }
 
 .cold {
   background: #1A237E;
@@ -31,3 +53,21 @@ body, html, #root, .weather-wrap {
 
 .normal {
   background: #69F0AE; }
+
+form {
+  position: fixed;
+  padding: 15px; }
+
+form input, form button {
+  padding: 10px 15px;
+  border: none; }
+
+form input:focus, form button:focus {
+  outline: none;
+  font-family: 'Roboto'; }
+
+form button {
+  background: #000;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700; }
